# ba-agent-tool

./: .gitignore  <!DOCTYPE html>.html  README.md  branding_instructions.md  frontend.html  install_and_run.py  landing.html  main.py  quickstart.txt  read_me.txt  setup_corporate_env.sh  setup_enhanced.py  simple_test.py
backend/: .aidigestignore  .gitignore  implementation_guide.md  index.html  main.py  pyproject.toml  requirements.txt
backend/embeddings/: test.py
backend/embeddings/docs/: RFR_FDS2993_Bewirtschaftung_POSITION_20240324_V0452.docx  RFR_FDS2993_Bewirtschaftung_POSITION_20240514_V0652.docx
backend/embeddings/other_docs/: BA_Analyse_2025-06-05.txt
backend/embeddings/other_docs/OneDrive_1_7-8-2025/: CCF CRR3 Multi Layer Mapping.docx  DDC_TEST_MAPPING.docx  RFR_FDS2993_Bewirtschaftung_POSITION_20240514_V0652.docx
backend/pages/: data_analytics.py  rag_cag.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/tool/: page.tsx
frontend/components/tool/: ApiConfig.tsx  ChatInterface.tsx  DocumentTabs.tsx  DocumentUpload.tsx  Footer.tsx  Header.tsx
frontend/lib/: types.ts
mapping_docs/: mapping_example.txt
rag_docs/: corporate_regulatory_guidelines.md
utils/: ui.py
