[project]
name = "ba-agent-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "chromadb>=1.0.15",
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "numpy>=2.3.1",
    "openai>=1.97.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf>=5.8.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.47.0",
    "unstructured>=0.18.9",
    "uvicorn>=0.35.0",
]
